--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,16 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@crypto-demo/shell": ["src/app/shell/index.ts"],
+      "@crypto-demo/currency": ["src/app/currency/index.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
 }
