--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "crypto-demo",
   "version": "0.0.0",
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/src/setup-jest.ts"]
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
@@ -31,6 +35,9 @@
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.4",
     "typescript": "~5.2.2"
   }
 }
